--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ruslan-bekdev.github.io/codenote/",
   "name": "codenote",
   "private": true,
   "version": "0.0.0",
@@ -6,13 +7,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "devDependencies": {
     "vite": "^6.0.5"
   },
   "dependencies": {
     "@shoelace-style/shoelace": "^2.19.1",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "gh-pages": "^6.3.0"
   }
 }
